# ElasticOpticalNetworkSimulator

./: .gitignore  CMakeLists.txt  demands.hpp  include.cmake  main.cpp
POL12/: pol12.pat
POL12/demands_0/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+460 more)
POL12/demands_1/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+460 more)
POL12/demands_2/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+460 more)
POL12/demands_3/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  (+494 more)
US26/: averaged_results.csv
networkStructure/: GlobalVariables.hpp  PreDefinedData.hpp  RequestHandler.hpp  builder.cpp  data.hpp  demands.hpp  networkDescription.hpp  predefinedPaths.hpp
utils/: builder.cpp  logger.hpp
(+13000 files in other folders)
